--- a/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/index.html
+++ b/JavaScript/Margit's Class/Tasks/Week_36/Car_Database/index.html
@@ -27,7 +27,7 @@
             <div class="form__input-wrapper">
               <input
                 class="form__input"
-                type="text"
+                type="number"
                 name="car-data"
                 id="licence-number"
                 placeholder="Licence Number"
@@ -59,7 +59,7 @@
               />
               <input
                 class="form__input"
-                type="text"
+                type="number"
                 name="car-data"
                 id="car-price"
                 placeholder="Car Price"
@@ -75,15 +75,11 @@
               />
             </div>
             <div class="form__button-wrapper">
-              <input
-                class="form__button-submit form__button"
-                type="button"
-                value="Add Car"
-              />
+              <input class="form__button-submit form__button" type="submit" />
               <input
                 class="form__button-reset form__button"
-                type="button"
-                value="Reset"
+                onclick="resetData()"
+                type="reset"
               />
             </div>
           </form>
@@ -94,19 +90,13 @@
             Here we display all the cars you added. If it’s empty, make sure to
             add a few by filling the form on the left.
           </p>
-          <div class="database">
+          <div id="database" class="database">
             <h3 class="database__h3">Licence</h3>
             <h3 class="database__h3">Maker</h3>
             <h3 class="database__h3">Model</h3>
             <h3 class="database__h3">Owner</h3>
             <h3 class="database__h3">Price</h3>
             <h3 class="database__h3">Color</h3>
-            <p class="database__p">Licence</p>
-            <p class="database__p">Maker</p>
-            <p class="database__p">Model</p>
-            <p class="database__p">Owner</p>
-            <p class="database__p">Price</p>
-            <p class="database__p">Color</p>
           </div>
         </section>
       </main>
