--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
@@ -35,7 +35,9 @@
         <!-- mobile links -->
         <ul id="navbar__links-mobile" class="navbar__links-mobile">
           <li class="navbar__link-mobile">
-            <a onclick="navToggle()" href="#projects">Projects</a>
+            <a class="navbar__a" onclick="navToggle()" href="#projects"
+              >Projects</a
+            >
           </li>
           <li onclick="navToggle()" class="navbar__link-mobile">
             <a href="#about">About Me</a>
@@ -55,233 +57,234 @@
         </div>
       </div>
     </nav>
-    <!-- Hero -->
-    <div id="hero" class="hero">
-      <h1 class="hero__h1">WELCOME TO MY WEBSITE</h1>
+    <!-- Main -->
+    <main>
+      <!-- Hero -->
+      <div id="hero" class="hero">
+        <h1 class="hero__h1">WELCOME TO MY WEBSITE</h1>
 
-      <img
-        class="hero__background hero__background-top"
-        src="/assets/bear_top.png"
-        alt=""
-      />
-      <img
-        class="hero__background hero__background-bot"
-        src="/assets/bear_bottom.png"
-        alt=""
-      />
-    </div>
-    <!-- Projects -->
-    <div class="projects section" id="projects">
-      <h2 class="projects__h2">Projects</h2>
-      <div class="projects__wrapper">
-        <!-- Card -->
-        <div class="card">
-          <div class="card__img-container">
-            <img src="/assets/projects_1.png" alt="" class="card__img" />
-          </div>
-          <div class="card__main">
-            <h3 class="card__h3">Static Website</h3>
-            <p class="card__p">HTML, CSS, JavaScript</p>
-            <a class="card__a" href="#"
-              >See More <img src="/assets/arrow_right.svg" alt=""
-            /></a>
-          </div>
-        </div>
-        <!-- Card -->
-        <div class="card">
-          <div class="card__img-container">
-            <img src="/assets/projects_2.png" alt="" class="card__img" />
-          </div>
-          <div class="card__main">
-            <h3 class="card__h3">Static Website</h3>
-            <p class="card__p">HTML, CSS, JavaScript</p>
-            <a class="card__a" href="#"
-              >See More <img src="/assets/arrow_right.svg" alt=""
-            /></a>
-          </div>
-        </div>
-        <!-- Card -->
-        <div class="card">
-          <div class="card__img-container card__last">
-            <img
-              src="/assets/projects_3.png"
-              alt=""
-              class="card__img card__last-img"
-            />
-          </div>
-          <div class="card__main">
-            <h3 class="card__h3">Static Website</h3>
-            <p class="card__p">HTML, CSS, JavaScript</p>
-            <a class="card__a" href="#"
-              >See More <img src="/assets/arrow_right.svg" alt=""
-            /></a>
-          </div>
-        </div>
+        <img
+          class="hero__background hero__background-top"
+          src="/assets/bear_top.png"
+          alt=""
+        />
+        <img
+          class="hero__background hero__background-bot"
+          src="/assets/bear_bottom.png"
+          alt=""
+        />
       </div>
-    </div>
-    <!-- About -->
-    <div class="about" id="about">
-      <img class="about__img" src="/assets/about.png" alt="" />
-      <div class="about__wrapper">
-        <h2 class="about__h2">About Me</h2>
-        <p class="about__p">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum
-          diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem
-          egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
-          Non commodo volutpat, pharetra, vel.
-        </p>
-      </div>
-    </div>
-    <!-- Skills -->
-    <div class="skills" id="skills">
-      <div class="skills__heading-wrapper">
-        <h2 class="skills__h2">Skills</h2>
-        <p class="skills__p">
-          The coding languages I use and my level of proficiency in them
-        </p>
-      </div>
-      <div class="skills__cards-wrapper">
-        <div class="skills__card">
-          <div class="skills__card-main">
-            <img
-              class="skills__card-logo"
-              src="/assets/html.svg"
-              alt="html logo"
-            />
-
-            <div class="skills__card-title">HTML</div>
-          </div>
-          <div class="skills__progress-wrapper">
-            <div class="skills__progress skills__progress-html"></div>
-          </div>
-        </div>
-        <div class="skills__card">
-          <div class="skills__card-main">
-            <img
-              class="skills__card-logo"
-              src="/assets/css.svg"
-              alt="html logo"
-            />
-
-            <div class="skills__card-title">CSS</div>
-          </div>
-          <div class="skills__progress-wrapper">
-            <div class="skills__progress skills__progress-css"></div>
-          </div>
-        </div>
-        <div class="skills__card">
-          <div class="skills__card-main">
-            <img
-              class="skills__card-logo"
-              src="/assets/js.svg"
-              alt="JavaScript logo"
-            />
-
-            <div class="skills__card-title">JavaScript</div>
-          </div>
-          <div class="skills__progress-wrapper">
-            <div class="skills__progress skills__progress-js"></div>
-          </div>
-        </div>
-        <div class="skills__card">
-          <div class="skills__card-main">
-            <img
-              class="skills__card-logo"
-              src="/assets/react.svg"
-              alt="ReactJS logo"
-            />
-            <div class="skills__card-title">ReactJS</div>
-          </div>
-          <div class="skills__progress-wrapper">
-            <div class="skills__progress skills__progress-react"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Contact -->
-    <div class="contact" id="contact">
-      <!-- Left -->
-      <div class="contact__container">
-        <div class="contact__wrapper-left">
-          <div class="contact__title">
-            <h2 class="contact__h2">Contact Me</h2>
-            <p class="contact__p">
-              Have an enquiry? Fill out the form to contact me
-            </p>
-          </div>
-
-          <ul class="contact__info">
-            <li href="" class="contact__a">
-              <img src="/assets/phone.svg" alt="" />+0123456789
-            </li>
-            <li href="" class="contact__a">
-              <img src="/assets/email.svg" alt="" /> hello@my.email
-            </li>
-            <li href="" class="contact__a">
-              <img src="/assets/pin.svg" alt="" />
-              6391 Elgin St. Celina, Delaware 10299
-            </li>
-          </ul>
-
-          <ul class="contact__socials">
-            <li class="contact__li">
-              <a href="" class="contact__a"
-                ><img src="/assets/instagram.svg" alt=""
-              /></a>
-            </li>
-            <li class="contact__li">
-              <a href="" class="contact__a"
-                ><img src="/assets/dribble.svg" alt=""
-              /></a>
-            </li>
-            <li class="contact__li">
-              <a href="" class="contact__a"
-                ><img src="/assets/twitter.svg" alt=""
-              /></a>
-            </li>
-            <li class="contact__li">
-              <a href="" class="contact__a"
-                ><img src="/assets/youtube.svg" alt=""
-              /></a>
-            </li>
-          </ul>
-        </div>
-        <!-- Right -->
-        <div class="contact__wrapper-right">
-          <form action="" class="form">
-            <div class="form__wrapper">
-              <label class="form__label" for="name">Name</label>
-              <input class="form__input" id="name" type="text" required />
+      <!-- Projects -->
+      <div class="projects section" id="projects">
+        <h2 class="projects__h2">Projects</h2>
+        <div class="projects__wrapper">
+          <!-- Card -->
+          <div class="card">
+            <div class="card__img-container">
+              <img src="/assets/projects_1.png" alt="" class="card__img" />
             </div>
-            <div class="form__wrapper">
-              <label class="form__label" for="email">Email</label>
-              <input class="form__input" id="email" type="email" required />
+            <div class="card__main">
+              <h3 class="card__h3">Static Website</h3>
+              <p class="card__p">HTML, CSS, JavaScript</p>
+              <a class="card__a" href="#"
+                >See More <img src="/assets/arrow_right.svg" alt=""
+              /></a>
             </div>
-            <div class="form__wrapper">
-              <label class="form__label" for="message">Message</label>
-              <textarea
-                class="form__textarea"
-                name="message"
-                id="message"
-                cols="30"
-                rows="10"
-                required
-              ></textarea>
+          </div>
+          <!-- Card -->
+          <div class="card">
+            <div class="card__img-container">
+              <img src="/assets/projects_2.png" alt="" class="card__img" />
+            </div>
+            <div class="card__main">
+              <h3 class="card__h3">Static Website</h3>
+              <p class="card__p">HTML, CSS, JavaScript</p>
+              <a class="card__a" href="#"
+                >See More <img src="/assets/arrow_right.svg" alt=""
+              /></a>
+            </div>
+          </div>
+          <!-- Card -->
+          <div class="card">
+            <div class="card__img-container card__last">
+              <img
+                src="/assets/projects_3.png"
+                alt=""
+                class="card__img card__last-img"
+              />
+            </div>
+            <div class="card__main">
+              <h3 class="card__h3">Static Website</h3>
+              <p class="card__p">HTML, CSS, JavaScript</p>
+              <a class="card__a" href="#"
+                >See More <img src="/assets/arrow_right.svg" alt=""
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- About -->
+      <div class="about" id="about">
+        <img class="about__img" src="/assets/about.png" alt="" />
+        <div class="about__wrapper">
+          <h2 class="about__h2">About Me</h2>
+          <p class="about__p">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Condimentum
+            diam orci pretium a pharetra, feugiat cursus. Dictumst risus, sem
+            egestas odio cras adipiscing vulputate. Nisi, risus in suscipit non.
+            Non commodo volutpat, pharetra, vel.
+          </p>
+        </div>
+      </div>
+      <!-- Skills -->
+      <div class="skills" id="skills">
+        <div class="skills__heading-wrapper">
+          <h2 class="skills__h2">Skills</h2>
+          <p class="skills__p">
+            The coding languages I use and my level of proficiency in them
+          </p>
+        </div>
+        <div class="skills__cards-wrapper">
+          <div class="skills__card">
+            <div class="skills__card-main">
+              <img
+                class="skills__card-logo"
+                src="/assets/html.svg"
+                alt="html logo"
+              />
+
+              <div class="skills__card-title">HTML</div>
+            </div>
+            <div class="skills__progress-wrapper">
+              <div class="skills__progress skills__progress-html"></div>
+            </div>
+          </div>
+          <div class="skills__card">
+            <div class="skills__card-main">
+              <img
+                class="skills__card-logo"
+                src="/assets/css.svg"
+                alt="html logo"
+              />
+
+              <div class="skills__card-title">CSS</div>
+            </div>
+            <div class="skills__progress-wrapper">
+              <div class="skills__progress skills__progress-css"></div>
+            </div>
+          </div>
+          <div class="skills__card">
+            <div class="skills__card-main">
+              <img
+                class="skills__card-logo"
+                src="/assets/js.svg"
+                alt="JavaScript logo"
+              />
+
+              <div class="skills__card-title">JavaScript</div>
+            </div>
+            <div class="skills__progress-wrapper">
+              <div class="skills__progress skills__progress-js"></div>
+            </div>
+          </div>
+          <div class="skills__card">
+            <div class="skills__card-main">
+              <img
+                class="skills__card-logo"
+                src="/assets/react.svg"
+                alt="ReactJS logo"
+              />
+              <div class="skills__card-title">ReactJS</div>
+            </div>
+            <div class="skills__progress-wrapper">
+              <div class="skills__progress skills__progress-react"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Contact -->
+      <div class="contact" id="contact">
+        <!-- Left -->
+        <div class="contact__container">
+          <div class="contact__wrapper-left">
+            <div class="contact__title">
+              <h2 class="contact__h2">Contact Me</h2>
+              <p class="contact__p">
+                Have an enquiry? Fill out the form to contact me
+              </p>
             </div>
 
-            <input class="form__button" type="button" value="Submit" />
-          </form>
+            <ul class="contact__info">
+              <li href="" class="contact__a">
+                <img src="/assets/phone.svg" alt="" />+0123456789
+              </li>
+              <li href="" class="contact__a">
+                <img src="/assets/email.svg" alt="" /> hello@my.email
+              </li>
+              <li href="" class="contact__a">
+                <img src="/assets/pin.svg" alt="" />
+                6391 Elgin St. Celina, Delaware 10299
+              </li>
+            </ul>
+
+            <ul class="contact__socials">
+              <li class="contact__li">
+                <a href="" class="contact__a"
+                  ><img src="/assets/instagram.svg" alt=""
+                /></a>
+              </li>
+              <li class="contact__li">
+                <a href="" class="contact__a"
+                  ><img src="/assets/dribble.svg" alt=""
+                /></a>
+              </li>
+              <li class="contact__li">
+                <a href="" class="contact__a"
+                  ><img src="/assets/twitter.svg" alt=""
+                /></a>
+              </li>
+              <li class="contact__li">
+                <a href="" class="contact__a"
+                  ><img src="/assets/youtube.svg" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+          <!-- Right -->
+          <div class="contact__wrapper-right">
+            <form action="" class="form">
+              <div class="form__wrapper">
+                <label class="form__label" for="name">Name</label>
+                <input class="form__input" id="name" type="text" required />
+              </div>
+              <div class="form__wrapper">
+                <label class="form__label" for="email">Email</label>
+                <input class="form__input" id="email" type="email" required />
+              </div>
+              <div class="form__wrapper">
+                <label class="form__label" for="message">Message</label>
+                <textarea
+                  class="form__textarea"
+                  name="message"
+                  id="message"
+                  cols="30"
+                  rows="10"
+                  required
+                ></textarea>
+              </div>
+
+              <input class="form__button" type="button" value="Submit" />
+            </form>
+          </div>
         </div>
       </div>
-    </div>
+      <a id="to-top" class="to-top" href="#">
+        <img src="/assets/back_to_top.svg" alt="" />
+      </a>
+    </main>
+    <!-- Footer -->
     <footer class="footer">
-      <div class="footer__wrapper">
-        <p class="footer__p">© 2021 Oliver Janhunen. All rights reserved</p>
-        <div class="footer__divider"></div>
-        <a class="footer__a" href="#"
-          ><img src="/assets/back_to_top.svg" alt=""
-        /></a>
-      </div>
+      <p class="footer__p">© 2022 Oliver Janhunen. All rights reserved</p>
     </footer>
   </body>
 </html>
