--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/pages/gallery.html
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/pages/gallery.html
@@ -60,35 +60,31 @@
         </div>
       </div>
     </nav>
-    <!-- gallery -->
-    <div class="gallery">
-      <div class="gallery__wrapper">
-        <div class="gallery__heading-wrapper">
-          <h2 class="gallery__h2">Gallery</h2>
-          <p class="skills__p">
-            A gallery of random images taken from unsplash
-          </p>
+    <main>
+      <!-- gallery -->
+      <div class="gallery">
+        <div class="gallery__wrapper">
+          <div class="gallery__heading-wrapper">
+            <h2 class="gallery__h2">Gallery</h2>
+            <p class="skills__p">
+              A gallery of random images taken from unsplash
+            </p>
+          </div>
+          <div class="img-1"></div>
+          <div class="img-2"></div>
+          <div class="img-3"></div>
+          <div class="img-4"></div>
+          <div class="img-5"></div>
+          <div class="img-6"></div>
+          <div class="img-7"></div>
+          <div class="img-8"></div>
+          <div class="img-9"></div>
         </div>
-        <div class="img-1"></div>
-        <div class="img-2"></div>
-        <div class="img-3"></div>
-        <div class="img-4"></div>
-        <div class="img-5"></div>
-        <div class="img-6"></div>
-        <div class="img-7"></div>
-        <div class="img-8"></div>
-        <div class="img-9"></div>
       </div>
-    </div>
+    </main>
     <!-- footer -->
     <footer class="footer">
-      <div class="footer__wrapper">
-        <p class="footer__p">© 2021 Oliver Janhunen. All rights reserved</p>
-        <div class="footer__divider"></div>
-        <a class="footer__a" href="#"
-          ><img src="/assets/back_to_top.svg" alt=""
-        /></a>
-      </div>
+      <p class="footer__p">© 2022 Oliver Janhunen. All rights reserved</p>
     </footer>
   </body>
 </html>
