--- a/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
+++ b/HTML & CSS/Vera's Class/Portfolio/06 Portfolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio 05</title>
+    <title>Portfolio 06</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,7 +12,16 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      href="favicon-dark.png"
+      rel="icon"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      href="favicon-light.png"
+      rel="icon"
+      media="(prefers-color-scheme: dark)"
+    />
     <script src="script.js" async></script>
   </head>
 
