added favicon, added icons

--- a/JavaScript/Margit's Class/Tasks/Week_36/Gradient_Generator/index.html
+++ b/JavaScript/Margit's Class/Tasks/Week_36/Gradient_Generator/index.html
@@ -16,6 +16,16 @@
       src="https://kit.fontawesome.com/8e0ddc688c.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      href="favicon-dark.png"
+      rel="icon"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      href="favicon-light.png"
+      rel="icon"
+      media="(prefers-color-scheme: dark)"
+    />
     <script src="script.js" async></script>
   </head>
   <body>
